rig/llm-d/overlays/inference-scheduling/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: llm-d-inference-scheduling
  namespace: llm-d
  labels:
    app: llm-d
    component: inference-scheduling
  annotations:
    argocd.argoproj.io/sync-wave: "30"
spec:
  parentRefs:
    - name: infra-inference-scheduling-gateway
      namespace: llm-d
  rules:
    - backendRefs:
        - group: inference.networking.k8s.io
          kind: InferencePool
          name: gaie-inference-scheduling
          port: 8000
          weight: 1
